ecmascript/parser/tests/test262-error-references/fail/a8beb1480f385441.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/a8beb1480f385441.js:1:1
  |
1 | func() = 4
  | ^^^^^^

